July 13, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/socket.c: Fixed FTBFS on Windows.
 * po/zh_CN.po: Updated.

July 12, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * configure.ac: Use pkgconfig to detect libcdio.
 * plugins/dfcdrom/Makefile.am: Likewise.

July 11, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfcdrom/cfg.c: Pick default cdrom device automatically on Solaris.
 * plugins/dfsound/spu.c: Reverted the previous change.

July 10, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * configure.ac: Added --enable-libcdio parameter.
 * libpcsxcore/cdriso.c: Moved CRC check into...
 * libpcsxcore/cdrom.c: ...here.
 * libpcsxcore/misc.c: Moved calcCrc() to misc.c.
 * libpcsxcore/misc.h: Likewise.
 * libpcsxcore/plugins.h: Added CRC field to SubQ struct.
 * plugins/dfcdrom/cdr-freebsd.c: Removed.
 * plugins/dfcdrom/cdr-solaris.c: Likewise.
 * plugins/dfcdrom/cdr-linux.c: Added raw MMC command support.
 * plugins/dfcdrom/cdr-null.c: Return 0 for PlayCDDA()/StopCDDA().
 * plugins/dfcdrom/cdr.c: Moved several utility functions to util.c.
 * plugins/dfcdrom/util.c: Added.
 * plugins/dfcdrom/cfg.c: Removed unnecessary includes.
 * plugins/dfcdrom/cdr-libcdio.c: Added libcdio support.
 * plugins/dfcdrom/Makefile.am: Added util.c and cdr-libcdio.c, removed
   cdr-freebsd.c and cdr-solaris.c.
 * plugins/dfsound/cfg.c: Store config file into plugins dir by default.
 * plugins/dfsound/spu.c: Made volume louder.
 * po/POTFILES.in: Added files in plugins/bladesio1.
 * po/update-pot.sh: Likewise.
 * po/pcsx.pot, po/*.po: Updated.

July 9, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfcdrom/cdr-solaris.c: Added (not implemented for now).
 * plugins/dfcdrom/Makefile.am: Added cdr-solaris.c.
 * plugins/dfcdrom/cdr-freebsd.c: Return 0 for PlayCDDA()/StopCDDA().
 * gui/ConfDlg.c: Don't use dlerror() to check for symbol load failure.
 * plugins/dfcdrom/cdr.c: Make cdHandle singleton as it could be different